#6404: DataExporter: should not require ajax="false" (#6408)
* #6404: DataExporter: should not require ajax="false"

* #6404: DataExporter: should not require ajax="false"

* #6404: DataExporter: should not require ajax="false"

CSV and XML

* #6404: DataExporter: Refactor XLS(X) and PDF

* #6404: DataExporter: Refactor CSV and XML

* #6404: DataExporter: Refactoring

* #6404: DataExporter: remove DynamicContentSrcBuilder usage

* #6404: DataExporter: fix import after merge

* #6404: DataExporter: use java.util.Base64

* #6404: DataExporter: use java.util.Base64

* #6404: DataExporter: prepare further refactorings

* #6404: DataExporter: refactoring

* #6404: DataExporter: refactoring

* #6404: DataExporter: refactoring

* #6404: DataExporter: refactoring

* #6404: DataExporter: fix typo

* #6404: DataExporter: refactoring

* newline at end of file

* #6404: DataExporter: refactoring